button exist in correct page
but not responsive

--- a/css/appPictureLibrary.css
+++ b/css/appPictureLibrary.css
@@ -120,6 +120,15 @@ h1::before {
   margin-top: 5px;
 }
 
+#slideBtn {
+  text-align: center;
+  margin-left:40%;
+  height: auto;
+  border-radius: 10px;
+  font-weight: bold;
+  background-color: pink;
+}
+
 .FlexItem .commentWrapper {
   padding: 10px;
   border-radius: 10px;
@@ -150,6 +159,7 @@ h1::before {
     opacity: 0;
   }
 }
+/*
 div .slides {
   margin: 50px auto;
   width: 500px;
@@ -163,19 +173,19 @@ div .slides {
   position: relative;
 }
 
-/* Slideshow container */
+/* Slideshow container 
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
+/* Hide the images by default 
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
+/* Next & previous buttons 
 .prev,
 .next {
   cursor: pointer;
@@ -192,7 +202,7 @@ div .slides {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
+/* Position the "next button" to the right
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -204,7 +214,7 @@ div .slides {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Caption text */
+/* Caption text 
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -215,7 +225,7 @@ div .slides {
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/3 etc) 
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -223,6 +233,8 @@ div .slides {
   position: absolute;
   top: 0;
 }
+*/
+
 
 .rating {
   display: flex;
